2000-07-10  David Huggins-Daines  <dhd@linuxcare.com>

	* stabs.c (parse_stab_range_type): Cast to proper type to fix
	warning.

2000-07-10  Ryan Bradetich  <rbradetich@uswest.net>

	* readelf.c (get_dynamic_data): Add casts and use unsigned chars
	to fix warnings.
	(process_symbol_table): Ditto.
	(procesS_extended_line_op): Ditto.
	(display_debug_lines): Ditto.
	(display_debug_pubnames): Ditto.
	(read_and_display_attr): Ditto.

2000-07-09  Nick Clifton  <nickc@cygnus.com>

	* MAINTAINERS: Add several more port specific maintainers.

2000-07-05  Nick Clifton  <nickc@cygnus.com>

	* MAINTAINERS: Add blanket write privs for Michael Meissner.

2000-06-05  DJ Delorie  <dj@redhat.com>

	* MAINTAINERS: New.

2000-07-01  Eric Fifer  <EFifer@sanwaint.com>

	* dllwrap.c: Changed mistaken dyn_string_append() calls
	to dyn_string_append_cstr().

2000-07-01  Alexander Aganichev <AAganichev@hypercom.com>

	* stabs.c (parse_stab_type): Divide size in bits by 8 as binutils
	struct debug_type stores size in bytes.

2000-07-01  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.am (DEP): Fix 2000-06-22.  grep after running dep.sed
	(CLEANFILES): Add DEPA.
	* Makefile.in: Regenerate.

2000-06-27  Alan Modra  <alan@linuxcare.com.au>

	* ar.c: Revert incorrect 2000-06-25 patch.
	* bucomm.c: Likewise.

2000-06-25 Mark Elbrecht <snowball3@bigfoot.com>

	* rdcoff (parse_coff_symbol): Treat GNU weak symbols as external.
	(external_coff_symbol_p): New function.
	(parse_coff): Use it.

2000-06-25  Alexander Aganichev <AAganichev@hypercom.com>

	* ar.c (normalize): Advance past both characters in a DOS based
	<letter>: filepath prefix.
	(main): Likewise.
	* bucomm.c (make_tempname): Likewise.

2000-06-24  Nick Clifton  <nickc@cygnus.com>

	* objdump.c (usage): Fix description of --stabs switch.

2000-06-22  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.am (DEP): grep for leading `/' in DEP1, and fail if we
	find one.
	* Makefile.in: Regenerate.
